atlassian/crucible/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crucible
  labels:
    app: crucible
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: crucible
  template:
    metadata:
      labels:
        app: crucible
    spec:
      containers:
        - name: crucible
          image: atlassian/crucible:4.8.10
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8080
