atlassian/crucible/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crucible
spec:
  type: NodePort
  selector:
    app: crucible
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: control
      port: 8059
      targetPort: 8059
