atlassian/crucible/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: crucible
spec:
  ingressClassName: traefik
  rules:
    - host: crucible.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crucible
                port:
                  number: 8080
